[gd_scene load_steps=26 format=3 uid="uid://cmqg83tvc3wae"]

[ext_resource type="Script" path="res://scripts/child.gd" id="1_dso0k"]
[ext_resource type="Texture2D" uid="uid://t3522536a1os" path="res://icon.svg" id="1_jtq7h"]
[ext_resource type="Texture2D" uid="uid://de681d4sd88pj" path="res://ressources/textures/teddy_bear.png" id="3_2fto3"]
[ext_resource type="AudioStream" uid="uid://b7fndkadro30c" path="res://ressources/audio/sadiquecat__flashlight-button-press_1.wav" id="4_0s60n"]
[ext_resource type="AudioStream" uid="uid://cqv0r1khh0d0i" path="res://ressources/audio/benjaminnelan__door-locked.wav" id="4_7fuph"]
[ext_resource type="Texture2D" uid="uid://kopi7ve0hon4" path="res://ressources/textures/flashlight.png" id="4_307u6"]
[ext_resource type="Texture2D" uid="uid://hgklt6jkrbx0" path="res://ressources/textures/flashlight_light.png" id="4_ijt5a"]
[ext_resource type="AudioStream" uid="uid://b54ngs1gn42fj" path="res://ressources/audio/sadiquecat__flashlight-button-press_2.wav" id="5_35wil"]
[ext_resource type="AudioStream" uid="uid://psg2b6v1ydao" path="res://ressources/audio/pagancow__dorm-door-opening.wav" id="5_rke8f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_435t3"]
size = Vector2(50, 110)

[sub_resource type="Gradient" id="Gradient_dikww"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_isire"]
gradient = SubResource("Gradient_dikww")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="Animation" id="Animation_7p7kh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TeddyBearSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(64, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TeddyBearSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TeddyBearSprite:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_5qwpv"]
resource_name = "get_closer"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TeddyBearSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(31, 30), Vector2(31, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TeddyBearSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TeddyBearSprite:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(0.4, 1),
"update": 0,
"values": [1.5708, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_17u5c"]
resource_name = "cuddling"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TeddyBearSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(0.6, 1.4, 1),
"update": 0,
"values": [Vector2(31, 0), Vector2(31, -6), Vector2(31, 6)]
}

[sub_resource type="Animation" id="Animation_jg508"]
resource_name = "put_away"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TeddyBearSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Vector2(31, 0), Vector2(31, 30)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TeddyBearSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TeddyBearSprite:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(0.4, 1),
"update": 0,
"values": [0.0, 1.5708]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lh0bp"]
_data = {
"RESET": SubResource("Animation_7p7kh"),
"cuddling": SubResource("Animation_17u5c"),
"get_closer": SubResource("Animation_5qwpv"),
"put_away": SubResource("Animation_jg508")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ee75a"]
playback_mode = 1
random_pitch = 1.2
streams_count = 2
stream_0/stream = ExtResource("4_0s60n")
stream_1/stream = ExtResource("5_35wil")

[sub_resource type="CircleShape2D" id="CircleShape2D_cs4fa"]
radius = 83.006

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mfnp8"]
bg_color = Color(0, 0, 0, 0.784314)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_77u7d"]
bg_color = Color(0.331067, 0.688637, 0.431668, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_doehs"]
size = Vector2(24, 124)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_582br"]
size = Vector2(46, 54)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jr6eu"]
size = Vector2(104, 35)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c58j0"]
size = Vector2(60, 35)

[node name="Child" type="CharacterBody2D"]
z_index = 10
script = ExtResource("1_dso0k")

[node name="ChildSprite" type="Sprite2D" parent="."]
scale = Vector2(0.40625, 0.875)
texture = ExtResource("1_jtq7h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_435t3")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(1.90735e-06, 1.90735e-06)
scale = Vector2(4, 4)
texture = SubResource("GradientTexture2D_isire")

[node name="TeddyBear" type="Node2D" parent="."]
visible = false

[node name="TeddyBearSprite" type="Sprite2D" parent="TeddyBear"]
visible = false
position = Vector2(64, 0)
scale = Vector2(2, 2)
texture = ExtResource("3_2fto3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TeddyBear"]
libraries = {
"": SubResource("AnimationLibrary_lh0bp")
}

[node name="Flashlight" type="Node2D" parent="."]
visible = false

[node name="TorchlightLight" type="Area2D" parent="Flashlight"]
position = Vector2(64, 0)
collision_layer = 4
collision_mask = 4

[node name="Sprite2D" type="Sprite2D" parent="Flashlight/TorchlightLight"]
visible = false
position = Vector2(86, 0)
texture = ExtResource("4_ijt5a")
offset = Vector2(112, 0)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Flashlight/TorchlightLight"]
polygon = PackedVector2Array(373, -153, 14, -8, 14, 8, 373, 151)
disabled = true

[node name="PointLight2D" type="PointLight2D" parent="Flashlight/TorchlightLight"]
position = Vector2(180, 2.38419e-07)
scale = Vector2(0.898045, 0.898045)
texture = ExtResource("4_ijt5a")

[node name="TorchlightSprite" type="Sprite2D" parent="Flashlight"]
position = Vector2(64, 0)
scale = Vector2(2, 2)
texture = ExtResource("4_307u6")

[node name="FlashlightAudio" type="AudioStreamPlayer" parent="Flashlight"]
stream = SubResource("AudioStreamRandomizer_ee75a")
bus = &"Sounds"

[node name="HurtBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_cs4fa")
debug_color = Color(0.920395, 0.256096, 0.304642, 0.42)

[node name="CourageBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -37.0
offset_top = 73.0
offset_right = 39.0
offset_bottom = 86.0
theme_override_styles/background = SubResource("StyleBoxFlat_mfnp8")
theme_override_styles/fill = SubResource("StyleBoxFlat_77u7d")
value = 100.0
show_percentage = false

[node name="LadderDetector" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="LadderDetector"]
shape = SubResource("RectangleShape2D_doehs")
debug_color = Color(0.470588, 0.501961, 0.25098, 0.419608)

[node name="WindowDetector" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="WindowDetector"]
shape = SubResource("RectangleShape2D_582br")
debug_color = Color(0.580941, 0.4581, 0.176535, 0.419608)

[node name="DoorDetector" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorDetector"]
position = Vector2(0, 23.5)
shape = SubResource("RectangleShape2D_jr6eu")
debug_color = Color(0.244563, 0.548732, 0.370223, 0.419608)

[node name="KeyDetector" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="KeyDetector"]
position = Vector2(0, 23.5)
shape = SubResource("RectangleShape2D_c58j0")
debug_color = Color(0.203184, 0.530685, 0.569075, 0.419608)

[node name="DoorLocked" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_7fuph")
bus = &"Sounds"

[node name="DoorOpened" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_rke8f")
bus = &"Sounds"

[connection signal="animation_finished" from="TeddyBear/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
[connection signal="body_exited" from="HurtBox" to="." method="_on_hurt_box_body_exited"]
